trys to fix button styles on mobile

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -255,7 +255,8 @@ input[type="text"],
 input[type="tel"],
 input[type="url"],
 input[type="password"],
-textarea, button {
+input[type="submit"],
+textarea {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none; }
